--- a/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
+++ b/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
@@ -225,24 +225,33 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="retirementAge" class="form-label">Retirement Age</label>
-                            <input type="number" id="retirementAge" class="form-control" 
-                                   @bind-value="spendingModel.RetirementAge" @bind-value:event="oninput" />
-                            <ValidationMessage For="@(() => spendingModel.RetirementAge)" class="text-danger" />
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="lifeExpectancy" class="form-label">Life Expectancy (Age)</label>
-                            <input type="number" id="lifeExpectancy" class="form-control" 
-                                   @bind-value="spendingModel.LifeExpectancy" @bind-value:event="oninput" />
-                            <ValidationMessage For="@(() => spendingModel.LifeExpectancy)" class="text-danger" />
-                            <div class="form-text">The age you want your money to last until</div>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="planDuration" class="form-label">Plan Duration (Years)</label>
-                            <input type="text" id="planDuration" class="form-control bg-light" value="@spendingModel.PlanYears" readonly />
-                            <div class="form-text">Automatically calculated based on your ages above</div>
+                            <label class="form-label">Ages and Duration</label>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="form-floating mb-2">
+                                        <input type="number" id="retirementAge" class="form-control" 
+                                               @bind-value="spendingModel.RetirementAge" @bind-value:event="oninput" />
+                                        <label for="retirementAge">Retirement Age</label>
+                                        <ValidationMessage For="@(() => spendingModel.RetirementAge)" class="text-danger" />
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-floating mb-2">
+                                        <input type="number" id="lifeExpectancy" class="form-control" 
+                                               @bind-value="spendingModel.LifeExpectancy" @bind-value:event="oninput" />
+                                        <label for="lifeExpectancy">Life Expectancy</label>
+                                        <ValidationMessage For="@(() => spendingModel.LifeExpectancy)" class="text-danger" />
+                                    </div>
+                                    <div class="form-text">The age you want your money to last until</div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-floating mb-2">
+                                        <input type="text" id="planDuration" class="form-control bg-light" value="@spendingModel.PlanYears" readonly />
+                                        <label for="planDuration">Plan Years</label>
+                                    </div>
+                                    <div class="form-text">Automatically calculated</div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="mb-3">
