--- a/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
+++ b/FinPlan.Web/Components/Pages/RetirementSpendingPlanner.razor
@@ -656,6 +656,7 @@
                                                                 <th>Traditional W/D</th>
                                                                 <th>Roth W/D</th>
                                                                 <th>Taxes Paid</th>
+                                                                <th>Tax Rate</th>
                                                                 <th>Taxable Growth</th>
                                                                 <th>Traditional Growth</th>
                                                                 <th>Roth Growth</th>
@@ -689,6 +690,7 @@
                                                                     <td class="money-value">@year.TraditionalWithdrawal.ToString("C0")</td>
                                                                     <td class="money-value">@year.RothWithdrawal.ToString("C0")</td>
                                                                     <td class="money-value">@year.TaxPaid.ToString("C0")</td>
+                                                                    <td>@spendingModel.TraditionalTaxRate%</td>
                                                                     <td class="money-value">@year.TaxableGrowth.ToString("C0")</td>
                                                                     <td class="money-value">@year.TraditionalGrowth.ToString("C0")</td>
                                                                     <td class="money-value">@year.RothGrowth.ToString("C0")</td>
@@ -724,6 +726,7 @@
                                                 <th>Traditional W/D</th>
                                                 <th>Roth W/D</th>
                                                 <th>Taxes Paid</th>
+                                                <th>Tax Rate</th>
                                                 <th>Taxable Growth</th>
                                                 <th>Traditional Growth</th>
                                                 <th>Roth Growth</th>
@@ -757,6 +760,7 @@
                                                     <td class="money-value">@year.TraditionalWithdrawal.ToString("C0")</td>
                                                     <td class="money-value">@year.RothWithdrawal.ToString("C0")</td>
                                                     <td class="money-value">@year.TaxPaid.ToString("C0")</td>
+                                                    <td>@spendingModel.TraditionalTaxRate%</td>
                                                     <td class="money-value">@year.TaxableGrowth.ToString("C0")</td>
                                                     <td class="money-value">@year.TraditionalGrowth.ToString("C0")</td>
                                                     <td class="money-value">@year.RothGrowth.ToString("C0")</td>
