--- a/FinPlan.Web/Components/Layout/NavMenu.razor
+++ b/FinPlan.Web/Components/Layout/NavMenu.razor
@@ -16,19 +16,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="savings-planner">
-                <span class="bi bi-calculator" aria-hidden="true"></span> Savings Planner
+                <span class="bi bi-calculator" aria-hidden="true"></span> Wealth Journey
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="retirement-spending">
-                <span class="bi bi-wallet2" aria-hidden="true"></span> Retirement Spending
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="simple-calculator">
-                <span class="bi bi-plus-slash-minus" aria-hidden="true"></span> Simple Calculator
+            <NavLink class="nav-link" href="retirement-spending" title="Financial Independence, Retire Early">
+                <span class="bi bi-wallet2" aria-hidden="true"></span> FIRE Planner
             </NavLink>
         </div>
     </nav>
